--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,10 +4,10 @@ server:
 spring:
   # 데이터베이스 설정
   datasource:
-      driverClassName: oracle.jdbc.driver.OracleDriver
-      url: jdbc:oracle:thin:@${db.host}:${db.port}:XE
-      username: ${db.username}
-      password: ${db.password}
+    driverClassName: oracle.jdbc.driver.OracleDriver
+    url: jdbc:oracle:thin:@${db.host}:${db.port}:XE
+    username: ${db.username}
+    password: ${db.password}
 
   # JPA 설정
   jpa:
@@ -16,19 +16,18 @@ spring:
         show_sql: true
         format_sql: true
         use_sql_comments: true
-
     hibernate:
-    ddlAuto: create
+      ddlAuto: update
 
   # 라이브 리로드 설정
   devtools:
     livereload:
       enabled: true
 
-  # 정적 자원 설정(CSS,JS,이미지)
+  # 정적 자원 설정(CSS, JS, 이미지)
   web:
     resources:
-      staticLocations: file:src/main/resources/static
+      staticLocations: file:src/main/resources/static/
 
   # 파일 업로드 용량 설정
   servlet:
@@ -37,13 +36,14 @@ spring:
       maxRequestSize: 60MB
       fileSizeThreshold: 30MB
 
+
 # 파일 업로드 경로 설정
 file:
   upload:
     path: D:/uploads
     url: /upload/
 
-  # 로거 설정
+# 로거 설정
 logging:
   level:
     org.hibernate.type: trace
