--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,23 @@
 server:
   port: 3000
 
+  # 이메일 전송
 spring:
+  mail:
+    host: smtp.gmail.com # SMTP 서버 호스트
+    port: 587 # SMTP 서버 포트
+    username: ${mail.username} # 이메일 아이디,  주소가 test@gmail.com 이면 test
+    password: ${mail.password} # 앱 비밀번호
+    properties:
+      mail:
+        smtp:
+          auth: true #사용자 인증 시도 여부 - 기본값 false
+          timeout: 5000 #Socket Read Timeout 시간(ms) - 기본값 : 무한대
+          starttls:
+            enable: true # StartTLS 활성화 여부 - 기본값 false
+
+
+
   # 데이터베이스 설정
   datasource:
     driverClassName: oracle.jdbc.driver.OracleDriver
@@ -48,3 +64,4 @@ logging:
   level:
     org.hibernate.type: trace
     org.hibernate.orm.jdbc.bind: trace
+
